# codex-codingplan

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  README_new.md  config.example.yaml  pyproject.toml  requirements.txt
codex_proxy/: __init__.py  client.py  config.py  converter.py  logging_utils.py  main.py  models.py  router.py  tools.py
docs/: feature-roadmap.md
docs/superpowers/plans/: 2026-03-29-chinese-readme-implementation.md  2026-03-29-logging-display-implementation.md  2026-03-29-tool-calling-implementation.md
docs/superpowers/specs/: 2026-03-29-chinese-readme-design.md  2026-03-29-logging-display-design.md  2026-03-29-tool-calling-design.md
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_converter.py  test_logging_utils.py  test_main.py  test_models.py  test_router.py
